--- a/sample.env
+++ b/sample.env
@@ -1,20 +1,24 @@
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
+# При запуске в Docker - хостом является название сервиса в compose
+POSTGRES_HOST=
 POSTGRES_PORT=5432
-# При деплое в докер - хостом является сервис в compose
-POSTGRES_URL=
+POSTGRES_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?sslmode=disable
 
+CH_HOST=
 CH_PORT=9000
 CH_HTTP_PORT=8123
-CLICKHOUSE_URL=
+CLICKHOUSE_URL=clickhouse://${CH_HOST}:${CH_PORT}
 
+REDIS_HOST=
 REDIS_PORT=6379
-REDIS_URL=
+REDIS_URL=redis://${REDIS_HOST}:${REDIS_PORT}/0
 
+NATS_HOST=
 NATS_PORT=4222
 NATS_HTTP_PORT=8222
-NATS_URL=
+NATS_URL=nats://${NATS_HOST}:${NATS_PORT}
 
 APP_PORT=8080
 APP_HOST=0.0.0.0
